fixed dark mode persistance

--- a/frontend/src/styles/_eventsList.scss
+++ b/frontend/src/styles/_eventsList.scss
@@ -4,24 +4,9 @@
   align-items: center;
 }
 
-.dark-mode-icon {
-  @include flexCenter();
-  color: $primary-color;
-
-  .light-sun {
-    display: none;
-  }
-}
-
-.active-dark {
-  @include flexCenter();
-  color: $text-color;
-  .light-sun {
-    display: block;
-  }
-  .dark-moon {
-    display: none;
-  }
+a,
+a:hover {
+  text-decoration: none;
 }
 
 .event-list {
